# kiri

./: .gitignore  CLAUDE.md  README.md  __init__.py  config.py  kiri.py  pyproject.toml  run.py  scan.py  server.py
atoms/drift/: collect.py  config.py  train.py
atoms/molecule/: collect.py  config.py  train.py
atoms/nerve/: collect.py  config.py  train.py
atoms/pulse/: collect.py  collect_mikrotik.py  config.py  train.py
atoms/rhythm/: collect.py  config.py  train.py
benchmark/: composition_test.py
core/: __init__.py  atom.py  atom_torch.py  language.py  molecule.py  pipe.py  value.py
daemon/: alerts.py  scheduler.py
docs/: index.html  live.html  monitor.html  params.html  trace.html  walkthrough.html
docs/research/: hardware.html  rocket.html  sml.html  understand.html
paper/: KIRI_Paper_Draft.docx  KIRI_Rocket_Sim.html  SML_Formal_Semantics.html  kiri_paper.md
root/: atom.py  atom_demo.py  kiri.html
tests/: conftest.py  test_atom.py  test_language.py  test_molecule.py  test_pipe.py  test_value.py
